# ChipIn

./: .gitignore  CMakeLists.txt  README.md
src/: chip8.c  chip8.h  hal.h  hal_pico.c  hal_sdl.c  main.c  main_pico.c  main_sdl.c
